# GODDAMNBLOCKS

./: .gitignore  CMakeLists.txt  CONTROLS.txt  LOG  STUDY_GUIDE_PROGRESS.md
Source/: Camera.h  CompiledShaders.h  Components.h  DX12Context.cpp  DX12Context.h  ECS.h  EngineMath.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GrmWindowWrapper.cpp  GrmWindowWrapper.h  InputState.h  Material.cpp  Material.h  MaterialShader.cpp  Material_minimal.h  Material_simplified.cpp  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  WinMain.cpp  World.cpp  World.h  pch.h
Source/Shaders/: Material.hlsl
Sprites/: 19338.atlas.json  README.md
Tools/: Build-SpriteAtlas.ps1
docs/: README.md  architecture.md  debug-playbook.md  implementation-log.md  learning-roadmap.md  render-pipeline.md  shader-layout.md
